--- a/contrib/generator/README
+++ b/contrib/generator/README
@@ -38,9 +38,8 @@ languages, if possible).
 
 - Input: 'xxx.cpp' which implements developer's application 
 - Output0: 'xxx.idl' which defines server-client interface in MsgPack-idl format
-- Output1: 'xxx_impl.(h|c)pp' which implements developer's application in server-side.
-- Output2: 'xxx_main.cpp' which includes 'main()'
-- Output3: 'xxx_keeper.cpp' -- keeper implementation includes 'main()'
+- Output1: 'xxx_impl.(h|c)pp' which implements developer's application in server-side including 'main()'
+- Output2: 'xxx_keeper.cpp' -- keeper implementation includes 'main()'
 
 
 First goal and the following sequence
