--- a/man/en/jubadump.1
+++ b/man/en/jubadump.1
@@ -55,6 +55,8 @@ Currently, following models are supported:
 \fBrecommender\fP (\fBinverted_index\fP only)
 .IP \(bu 2
 \fBanomaly\fP (\fBlof\fP with \fBinverted_index\fP backend only)
+.IP \(bu 2
+\fBnearest_neighbor\fP
 .UNINDENT
 .SS Options
 .INDENT 0.0
