--- a/man/ja/jubadump.1
+++ b/man/ja/jubadump.1
@@ -55,6 +55,8 @@ jubadump \-i <file> [options ...]
 \fBrecommender\fP (\fBinverted_index\fP のみ)
 .IP \(bu 2
 \fBanomaly\fP (\fBlof\fP の \fBinverted_index\fP バックエンドのみ)
+.IP \(bu 2
+\fBnearest_neighbor\fP
 .UNINDENT
 .SS Options
 .INDENT 0.0
